force-app/main/default/objects/Issue_UpdateServices__c/Issue_UpdateServices__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Issue_UpdateServices</label>
</CustomObject>