force-app/main/default/objects/Issue_UpdateServices__c/fields/Primary_Receiver2__c.field-meta.xml
<CustomField>
    <fullName>Primary_Receiver2__c</fullName>
    <label>Primary Receiver2</label>
    <type>Email</type>
</CustomField>