force-app/main/default/objects/Issue_UpdateServices__c/fields/Primary_Receiver3__c.field-meta.xml
<CustomField>
    <fullName>Primary_Receiver3__c</fullName>
    <label>Primary Receiver3</label>
    <type>Email</type>
</CustomField>