force-app/main/default/objects/Issue_UpdateServices__c/fields/sender__c.field-meta.xml
<CustomField>
    <fullName>sender__c</fullName>
    <label>sender</label>
    <length>100</length>
    <type>Text</type>
</CustomField>